[package]
name = "rct"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
lapin = "1.0.0-beta1"
smol = "0.1"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0.1"
